--- a/src/main/resources/se_prototype/se_prototype/category.fxml
+++ b/src/main/resources/se_prototype/se_prototype/category.fxml
@@ -7,6 +7,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.Region?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="se_prototype.se_prototype.CategoryController"
@@ -19,6 +23,17 @@
         <HBox alignment="CENTER_LEFT" spacing="10">
             <Button text="←" onAction="#onBackButtonClick" style="-fx-font-size: 20px; -fx-background-color: transparent; -fx-text-fill: #37474F;" />
             <Label fx:id="categoryTitle" text="Category" style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: #37474F;" />
+            <Region HBox.hgrow="ALWAYS"/>
+            <StackPane fx:id="pressed" onMouseClicked="#goToCart" alignment="TOP_RIGHT">
+                <Button fx:id="cartButton" style="-fx-pref-width: 40; -fx-pref-height: 40; -fx-background-color: transparent; -fx-border-color: transparent" alignment="CENTER_RIGHT"/>
+                <Label fx:id="cartItemCountLabel"
+                       text="0"
+                       style="-fx-background-color: #FF6B6B; -fx-text-fill: white; -fx-font-size: 12px; -fx-font-weight: bold; -fx-padding: 5; -fx-border-radius: 50; -fx-background-radius: 50;">
+                    <StackPane.margin>
+                        <Insets top="5" right="5" bottom="5" left="5" />
+                    </StackPane.margin>
+                </Label>
+            </StackPane>
         </HBox>
     </VBox>
 
