--- a/src/main/resources/se_prototype/se_prototype/signup.fxml
+++ b/src/main/resources/se_prototype/se_prototype/signup.fxml
@@ -64,7 +64,7 @@
         <!-- Signup Button -->
         <Button fx:id="signupButton" text="Sign Up"
                 style="-fx-background-color: #5EC401; -fx-text-fill: white; -fx-font-weight: bold; -fx-border-radius: 8; -fx-padding: 10;  -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 5, 0, 0, 0); -fx-background-radius: 8;"
-                maxWidth="350"/>
+                maxWidth="350" onAction="#handleSignup"/>
     </VBox>
 
 
